--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,19 +56,18 @@ stages:
   condition: succeeded()
 
   jobs:
-  - deployment: Deploy
-    displayName: Deploy
-    environment: 'development'
+  - job: Test
+    displayName: Test
     pool:
       vmImage: $(vmImageName)
 
     steps:
-      - task: VSTest@2
-        inputs:
-          testSelector: 'testAssemblies'
-          testAssemblyVer2: |
-            **\*test*.dll
-            !**\*TestAdapter.dll
-            !**\obj\**
-          searchFolder: '$(System.DefaultWorkingDirectory)/DevCon19/DevCon19.Functions.Tests'
-          testRunTitle: 'AzFunctions Unit Tests'
+    - task: VSTest@2
+      inputs:
+        testSelector: 'testAssemblies'
+        testAssemblyVer2: |
+          **\*test*.dll
+          !**\*TestAdapter.dll
+          !**\obj\**
+        searchFolder: '$(System.DefaultWorkingDirectory)/DevCon19/DevCon19.Functions.Tests'
+        testRunTitle: 'AzFunctions Unit Tests'
