--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
     - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
       artifact: drop
 
-- stage: Test Functions
+- stage: Test
   displayName: Unit test Azure Functions
   dependsOn: Build
   condition: succeeded()
