--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,15 +71,15 @@ stages:
         command: 'build'
         projects: |
           $(testDirectory)/*.csproj
-        arguments: --configuration Release
+        arguments: --output $(System.DefaultWorkingDirectory)/test_output --configuration Release
 
     - task: VSTest@2
       inputs:
         testSelector: 'testAssemblies'
         testAssemblyVer2: |
-          **\bin\$(BuildConfiguration)\**\*test*.dll
+          **\bin\Release\**\*test*.dll
           !**\obj\**
           !**\xunit.runner.visualstudio.testadapter.dll
           !**\xunit.runner.visualstudio.dotnetcore.testadapter.dll
-        searchFolder: '$(System.DefaultWorkingDirectory)/DevCon19/DevCon19.Functions.Tests'
+        searchFolder: '$(System.DefaultWorkingDirectory)/test_output'
         testRunTitle: 'AzFunctions Unit Tests'
