--- a/DevCon19/DevCon19.Functions/DevCon19.Functions.csproj
+++ b/DevCon19/DevCon19.Functions/DevCon19.Functions.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.30-beta2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
