--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,8 @@ stages:
       displayName: Build
       inputs:
         command: 'build'
-        projects: (workingDirectory)/*.csproj
+        projects: |
+          $(workingDirectory)/*.csproj
         arguments: --output $(System.DefaultWorkingDirectory)/publish_output --configuration Release
 
     - task: ArchiveFiles@2
