--- a/azure-pipelines-web.yml
+++ b/azure-pipelines-web.yml
@@ -36,16 +36,20 @@ stages:
         command: 'build'
         projects: |
           $(workingDirectory)/*.csproj
-        arguments: --output $(System.DefaultWorkingDirectory)/web_publish_output --configuration Release
+        arguments: --configuration Release
 
-    - task: ArchiveFiles@2
-      displayName: 'Archive files'
+    - task: DotNetCoreCLI@2
+      displayName: Publish
       inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)/web_publish_output'
-        includeRootFolder: false
-        archiveType: zip
-        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-        replaceExistingArchive: true
-
-    - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-      artifact: drop
+        command: 'publish'
+        projects: |
+          $(workingDirectory)/*.csproj
+        arguments: --output $(System.DefaultWorkingDirectory)/web_publish_output --configuration Release
+        
+    - task: AzureFileCopy@3
+      inputs:
+        SourcePath: '$(System.DefaultWorkingDirectory)/web_publish_output/DevCon19.Web/dist'
+        azureSubscription: 'Anarcill - Internal (1a4cbd69-9ac0-4828-892e-5b8f729c302b)'
+        Destination: 'AzureBlob'
+        storage: 'anarcilldevconstorage'
+        ContainerName: '$web'
