Moved Models into Common library

--- a/DevCon19/DevCon19.Web/DevCon19.Web.csproj
+++ b/DevCon19/DevCon19.Web/DevCon19.Web.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="System.Text.Json" Version="4.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DevCon19.Common\DevCon19.Common.csproj" />
+  </ItemGroup>
+
 </Project>
