--- a/DevCon19/DevCon19.Functions/DevCon19.Functions.csproj
+++ b/DevCon19/DevCon19.Functions/DevCon19.Functions.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <AzureFunctionsVersion>v3-preview</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.30-beta2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DevCon19.Common\DevCon19.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
